rought cut of fleeting thoughts

--- a/spec/template/_SpecRunner.tmpl
+++ b/spec/template/_SpecRunner.tmpl
@@ -17,9 +17,11 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="src/namespace.js"></script>
+  <script type="text/javascript" src="src/Character.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SetupSpec.js"></script>
+  <script type="text/javascript" src="spec/CharacterSpec.js"></script>
 
   <script type="text/javascript" src="/node_modules/grunt-jasmine-runner/tasks/jasmine/phantom-helper.js"></script>
   
